# bootstrap

./: .gitignore  .ocamlformat  README.md  dune  dune-project  project.org  scratch.opam
doc/: Makefile  presentation.org  project.org  project.tex  rapport.org  rapport.tex  rapportSetup.sty
lib/: atom.ml  atom.mli  binder.ml  context.ml  driver.ml  dune  interpret.ml  interpreter.ml  lexer.mll  norm.ml  parser.mly  pp.ml  print.ml  quote.ml  syntax.ml  types.ml  typing.ml
test/: church.md  dune  main.md
